[WCMSFEQ-176] - Fixed floating on LEGEND tags to force lines to wrap in IE

--- a/CancerGov/_src/StyleSheets/components/_forms.scss
+++ b/CancerGov/_src/StyleSheets/components/_forms.scss
@@ -332,6 +332,7 @@ fieldset {
 		color: $header-font-color;
 		font-size: $legend-font-size;
 		line-height: $legend-lineheight;
+		float:left;
 	}
 
 }
